Correct handling of ERR_CACHE_LOCK_TIMEOUT for read only transactions.

The investigation of the root cause is detailed in
https://bugs.chromium.org/p/chromium/issues/detail?id=647177#c11

BUG=647177

Review-Url: https://codereview.chromium.org/2671793002
Cr-Commit-Position: refs/heads/master@{#449342}

Former-commit-id: 3701cde07f15ce076d9005bac70cb6fe65f465bb